# backend-test-task-one-time-secret

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  security.py
src/database/: db.py  models.py
src/templates/: base.html  conceal.html  error.html  index.html  reveal.html
